--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ testing = [
     "pydoclint==0.6.0",
     "pyenchant==3.2.2",
     "semgrep==1.103.0",
+    "pytest==8.3.5",
     "types-requests==2.32.0.20250301",
     "types-waitress==3.0.1.20241117"
 ]
