--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,10 @@ license-files = ["LICENSE"]
 requires-python = "~=3.12"
 dependencies = [
   "requests==2.31.0",
+  "langchain==0.3.25",
+  "langchain-community==0.3.24",
+  "langchain-openai==0.3.17",
+  "langchain-anthropic==0.3.13",
 ]
 
 [project.optional-dependencies]
